[FIX] Adds a bottom spacing to the news-row that is *not* placed in .formatting div

--- a/src/assets/toolkit/styles/6-components/_components.news.scss
+++ b/src/assets/toolkit/styles/6-components/_components.news.scss
@@ -57,6 +57,8 @@ $media-portrait-dynamic-width:  25%;
   .news {
     padding-left: 0;
 
+    article { margin-bottom: $gap-content; }
+
     li {
       @include clearfix;
       margin-bottom: 0;
